minor styly fixes for close and refresh  buttons

--- a/style.css
+++ b/style.css
@@ -835,23 +835,23 @@ input.loading {
     position: absolute;
     top: 6px;
     right: 6px;
-    background: var(--red-5);
+    background: rgba(255,255,255,0.1);
     border: none;
     color: white;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 9px;
     padding: 0;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 3px;
+    padding-bottom: 2px;
 }
 
 .watchlist-remove-btn:hover {
-    background: var(--red-6);
+    background: rgba(231, 7, 7, 0.3);
     transform: scale(1.1);
 }
 
@@ -868,7 +868,7 @@ input.loading {
     border: none;
     color: white;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 22px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -876,6 +876,7 @@ input.loading {
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
+    padding-bottom: 5px;
 }
 
 .refresh-watchlist-btn:hover {
